<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BreedActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/info"

    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/infoLinearLayout"
            tools:ignore="MissingConstraints">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:id="@+id/imgV"
                    />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/loadImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_load"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_secondary"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/loadImg"
            app:layout_constraintEnd_toEndOf="@+id/loadImg"
            app:srcCompat="@drawable/ic_delete" />



</androidx.constraintlayout.widget.ConstraintLayout>